--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@js-joda/timezone": "^2.5.0",
     "concurrently": "^8.2.0",
     "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
     "d3-shape": "^3.2.0",
     "tailwind": "^4.0.0"
   }
